--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Ice Creame</title>
+
+    <title>Ice cream made with passion</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -13,8 +14,24 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-<p>hello</p>
+    <!-- developers name -->
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <!-- developers name -->
+    <include src="./partials/products.html"></include>
+    <!-- developers name -->
+    <include src="./partials/about.html"></include>
+    <!-- developers name -->
+    <include src="./partials/advantages.html"></include>
+    <!-- developers name -->
+    <include src="./partials/gallery.html"></include>
+    <!-- developers name -->
+    <include src="./partials/customer_reviews.html"></include>
+    <!-- developers name -->
+    <include src="./partials/contacts.html"></include>
+    <!-- developers name -->
+    <include src="./partials/footer.html"></include>
+    <p>hello</p>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
