added  meta ico

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type=”image/png” href="images/ico.png" >
+
 
     <title>Ice cream made with passion</title>
     <link
@@ -31,7 +33,7 @@
     <include src="./partials/contacts.html"></include>
     <!-- developers name -->
     <include src="./partials/footer.html"></include>
-    <p>hello</p>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
