--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,20 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <!-- developers name -->
+    <!-- Artem -->
     <include src="./partials/header.html"></include>
+
+    <!-- Serhii Stel -->
     <include src="./partials/hero.html"></include>
-    <!-- developers name -->
+    <!-- Anastasija Voznuk-->
     <include src="./partials/products.html"></include>
-    <!-- developers name -->
+    <!-- Rostislav-->
     <include src="./partials/about.html"></include>
     <!-- developers name -->
     <include src="./partials/advantages.html"></include>
-    <!-- developers name -->
+    <!-- Andriy-->
     <include src="./partials/gallery.html"></include>
-    <!-- developers name -->
+    <!-- Kate -->
     <include src="./partials/customer_reviews.html"></include>
     <!-- developers name -->
     <include src="./partials/contacts.html"></include>
