--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type=”image/png” href="images/ico.png" >
 
-
     <title>Ice cream made with passion</title>
     <link
       rel="stylesheet"
@@ -19,7 +18,7 @@
     <!-- Artem -->
     <include src="./partials/header.html"></include>
 
-    <!-- Serhii Stel -->
+    <!-- SeRgNeschetniy -->
     <include src="./partials/hero.html"></include>
     <!-- Anastasija Voznuk-->
     <include src="./partials/products.html"></include>
