--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <include src="./partials/gallery.html"></include>
     <!-- Kate -->
     <include src="./partials/customer_reviews.html"></include>
-    <!-- developers name -->
+    <!-- Volodymyr -->
     <include src="./partials/contacts.html"></include>
     <!-- developers name -->
     <include src="./partials/footer.html"></include>
