--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
     <!-- developers name -->
     <include src="./partials/footer.html"></include>
 
+    <!-- Зразок кнопок -->
+    <include src="./partials/components/button.html"></include>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
