--- a/src/index.html
+++ b/src/index.html
@@ -21,24 +21,24 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <!-- Artem -->
+    <!-- Artem Recembei  -->
     <include src="./partials/header.html"></include>
 
-    <!-- SeRgNeschetniy -->
+    <!-- Сергій Нещетний -->
     <include src="./partials/hero.html"></include>
-    <!-- Anastasija Voznuk-->
+    <!-- Анастасія Вознюк -->
     <include src="./partials/products.html"></include>
-    <!-- Rostislav-->
+    <!-- Rostyslav Kovalchuk-->
     <include src="./partials/about.html"></include>
-    <!-- developers name -->
+    <!-- Богдан -->
     <include src="./partials/advantages.html"></include>
-    <!-- Andriy-->
+    <!-- Andrix-->
     <include src="./partials/gallery.html"></include>
     <!-- Kate -->
     <include src="./partials/customer_reviews.html"></include>
-    <!-- developers name -->
+    <!-- Volodymyr Korniychuk -->
     <include src="./partials/contacts.html"></include>
-    <!-- developers name -->
+    <!-- Maria Smetaniuk -->
     <include src="./partials/footer.html"></include>
 
     <!-- Зразок кнопок -->
