--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
     />
   </head>
   <body>
+  
+
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- Artem Recembei  -->
     <include src="./partials/header.html"></include>
@@ -43,6 +45,8 @@
 
     <!-- Зразок кнопок -->
     <include src="./partials/components/button.html"></include>
+    <include src="./partials/components/modal-btn.html"></include>
+
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
