--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <!-- Зразок кнопок -->
     <include src="./partials/components/button.html"></include>
     <include src="./partials/components/modal-btn.html"></include>
+    <include src="./partials/components/popap.html"></include>
 
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
