--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,6 @@
     />
   </head>
   <body>
-  
-
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- Artem Recembei  -->
     <include src="./partials/header.html"></include>
@@ -48,8 +46,9 @@
     <include src="./partials/components/modal-btn.html"></include>
     <include src="./partials/components/popap.html"></include>
 
-
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="./js/jquery.spincrement.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
