--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <!-- // Add the new slick-theme.css if you want the default styling -->
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 
     <title>Ice cream made with passion</title>
     <link
@@ -42,8 +45,8 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Зразок кнопок -->
-    <include src="./partials/components/button.html"></include>
-    <include src="./partials/components/modal-btn.html"></include>
+    <!-- <include src="./partials/components/button.html"></include> -->
+    <!-- <include src="./partials/components/modal-btn.html"></include> -->
     <include src="./partials/components/popap.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
