--- a/src/index.html
+++ b/src/index.html
@@ -25,24 +25,24 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- Artem Recembei  -->
-    <include src="./partials/header.html"></include>
+    <!-- <include src="./partials/header.html"></include> -->
 
     <!-- Сергій Нещетний -->
-    <include src="./partials/hero.html"></include>
+    <!-- <include src="./partials/hero.html"></include> -->
     <!-- Анастасія Вознюк -->
     <include src="./partials/products.html"></include>
     <!-- Rostyslav Kovalchuk-->
-    <include src="./partials/about.html"></include>
+    <!-- <include src="./partials/about.html"></include> -->
     <!-- Богдан -->
-    <include src="./partials/advantages.html"></include>
+    <!-- <include src="./partials/advantages.html"></include> -->
     <!-- Andrix-->
-    <include src="./partials/gallery.html"></include>
+    <!-- <include src="./partials/gallery.html"></include> -->
     <!-- Kate -->
-    <include src="./partials/customer_reviews.html"></include>
+    <!-- <include src="./partials/customer_reviews.html"></include> -->
     <!-- Volodymyr Korniychuk -->
-    <include src="./partials/contacts.html"></include>
+    <!-- <include src="./partials/contacts.html"></include> -->
     <!-- Maria Smetaniuk -->
-    <include src="./partials/footer.html"></include>
+    <!-- <include src="./partials/footer.html"></include> -->
 
     <!-- Зразок кнопок -->
     <!-- <include src="./partials/components/button.html"></include> -->
