--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,13 @@
     <!-- <include src="./partials/components/button.html"></include> -->
     <include src="./partials/components/modal-btn.html"></include>
     <include src="./partials/components/popap.html"></include>
+    <include src="./partials/components/mail-form.html"></include>
+
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/jquery.spincrement.min.js"></script>
     <script src="./index.js"></script>
   </body>
+  
 </html>
