--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     <!-- <include src="./partials/components/button.html"></include> -->
     <include src="./partials/components/modal-btn.html"></include>
     <include src="./partials/components/popap.html"></include>
-    <include src="./partials/components/mail-form.html"></include>
+    <!-- <include src="./partials/components/mail-form.html"></include> -->
 
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
