--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Зразок кнопок -->
-    <!-- <include src="./partials/components/button.html"></include> -->
+    <include src="./partials/components/button.html"></include>
     <include src="./partials/components/modal-btn.html"></include>
     <include src="./partials/components/popap.html"></include>
     <!-- <include src="./partials/components/mail-form.html"></include> -->
