--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- Artem Recembei  -->
-    <include src="./partials/header.html"></include>
+    <!-- <include src="./partials/header.html"></include> -->
 
     <!-- Сергій Нещетний -->
     <include src="./partials/hero.html"></include>
