chenge section/ and  js

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,17 @@
     <!-- // Add the new slick-theme.css if you want the default styling -->
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 
-
     <title>Ice cream made with passion</title>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -49,25 +56,25 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Зразок кнопок -->
-    <include src="./partials/components/button.html"></include>
-    <include src="./partials/components/modal-btn.html"></include>
+    <!-- <include src="./partials/components/button.html"></include> -->
+    <!-- <include src="./partials/components/modal-btn.html"></include> -->
     <include src="./partials/components/popap.html"></include>
     <!-- <include src="./partials/components/mail-form.html"></include> -->
 
-
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
-    <script src="./index.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- <script src="./index.js"></script>  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script>
- $('.single-item').slick();
+      $('.single-item').slick();
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/jquery.spincrement.min.js"></script>
     <script src="./index.js"></script>
-
   </body>
-  
 </html>
