herro edit. min width

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- Artem Recembei  -->
-    <!-- <include src="./partials/header.html"></include> -->
+    <include src="./partials/header.html"></include>
 
     <!-- Сергій Нещетний -->
     <include src="./partials/hero.html"></include>
