--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,21 @@
 
     <title>Ice cream made with passion</title>
 
-   
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
 
     <link
       rel="stylesheet"
@@ -42,24 +53,27 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <!-- Artem Recembei  -->
     <include src="./partials/header.html"></include>
 
-    <!-- Сергій Нещетний -->
-    <include src="./partials/hero.html"></include>
-    <!-- Анастасія Вознюк -->
-    <include src="./partials/products.html"></include>
-    <!-- Rostyslav Kovalchuk-->
-    <include src="./partials/about.html"></include>
-    <!-- Богдан -->
-    <include src="./partials/advantages.html"></include>
-    <!-- Andrix-->
-    <include src="./partials/gallery.html"></include>
-    <!-- Kate -->
-    <include src="./partials/customer_reviews.html"></include>
-    <!-- Volodymyr Korniychuk -->
-    <include src="./partials/contacts.html"></include>
+    <main>
+      <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+      <!-- Artem Recembei  -->
+
+      <!-- Сергій Нещетний -->
+      <include src="./partials/hero.html"></include>
+      <!-- Анастасія Вознюк -->
+      <include src="./partials/products.html"></include>
+      <!-- Rostyslav Kovalchuk-->
+      <include src="./partials/about.html"></include>
+      <!-- Богдан -->
+      <include src="./partials/advantages.html"></include>
+      <!-- Andrix-->
+      <include src="./partials/gallery.html"></include>
+      <!-- Kate -->
+      <include src="./partials/customer_reviews.html"></include>
+      <!-- Volodymyr Korniychuk -->
+      <include src="./partials/contacts.html"></include>
+    </main>
     <!-- Maria Smetaniuk -->
     <include src="./partials/footer.html"></include>
 
@@ -92,6 +106,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/jquery.spincrement.min.js"></script>
     <script src="./index.js"></script>
-
   </body>
 </html>
