--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,8 @@
       <!-- Volodymyr Korniychuk -->
       <include src="./partials/contacts.html"></include>
     </main>
+    <div class="overlay js-overlay-modal"></div>
+
     <!-- Maria Smetaniuk -->
     <include src="./partials/footer.html"></include>
 
