fix and add scroll btn

--- a/src/index.html
+++ b/src/index.html
@@ -72,12 +72,13 @@
       <!-- Kate -->
       <include src="./partials/customer_reviews.html"></include>
       <!-- Volodymyr Korniychuk -->
-      <include src="./partials/contacts.html"></include>
+      <include src="./partials/contacts.html"></include>      
     </main>
     <div class="overlay js-overlay-modal"></div>
 
     <!-- Maria Smetaniuk -->
     <include src="./partials/footer.html"></include>
+    <!-- <div id="toTop">#</div> -->
 
     <!-- Зразок кнопок -->
     <!-- <include src="./partials/components/button.html"></include> -->
