--- a/src/index.html
+++ b/src/index.html
@@ -3,60 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="icon"  href="images/ico.png" >
+    <link rel="icon" href="images/ico.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <!-- // Add the new slick-theme.css if you want the default styling -->
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
-
-    <title>Ice cream made with passion</title>
-
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
-    />
-
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
-    />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-
-
-    <link
-    rel="stylesheet"
-    href="https://unpkg.com/swiper/swiper-bundle.min.css"
-/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <title>Ice cream made with passion</title>
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -78,16 +39,13 @@
       <!-- Kate -->
       <include src="./partials/customer_reviews.html"></include>
       <!-- Volodymyr Korniychuk -->
-      <include src="./partials/contacts.html"></include>      
+      <include src="./partials/contacts.html"></include>
     </main>
     <div class="overlay js-overlay-modal"></div>
 
     <!-- Maria Smetaniuk -->
-    <include src="./partials/footer.html"></include>    
+    <include src="./partials/footer.html"></include>
 
-    <!-- Зразок кнопок -->
-    <!-- <include src="./partials/components/button.html"></include> -->
-    <!-- <include src="./partials/components/modal-btn.html"></include> -->
     <include src="./partials/components/popap.html"></include>
     <!-- <include src="./partials/components/mail-form.html"></include> -->
 
@@ -95,26 +53,8 @@
 
     <!-- <script src="./index.js"></script>  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- <script
-      type="text/javascript"
-      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
-    <script>
-
- $('.multiple-items').slick({
-  infinite: true,
-  slidesToShow: 1,
-  slidesToScroll: 1
-});
-    </script>
-<script>
-      $('.single-item').slick();
-    </script> -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="./js/jquery.spincrement.min.js"></script>
-    <script src="./index.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/swiper.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
