--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,8 @@
     <include src="./partials/footer.html"></include>
 
     <include src="./partials/components/popap.html"></include>
+    <include src="./partials/components/map.html"></include>
+
     <!-- <include src="./partials/components/mail-form.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
